--- a/hola.html
+++ b/hola.html
@@ -127,4 +127,24 @@ Javascript no podrea realizar ninguna de las siguientes tareas
 Punto 4:
 
 
+
+VARIABLES: 
+
+un dato es un registro de algo 
+
+una variable es la manera de guardfar ese dato en programacion
+
+podemos definir las variables de tres maneras 
+var
+let
+cons
+
+cualquiera de estos comandos seguidos del nombre de la variable
+
+
+
+<script>
+        console.log()
+</script>
+
 </body>
