--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<script src="calculadora.js">
+<script src="temperatures.js">
 </script>
 <title>hola</title>
 </head>
@@ -10,7 +10,7 @@
     <h2>UD #3</h2>
     <h3>Estrucuturas de control</h3>
 <p>
-    <a href="#" onclick="  calculadora()">hola, esto es una pagina</a>
+    <a href="#" onclick="  temperaturas()">hola, esto es una pagina</a>
 </p>
 </body>
 </html>
